#17695: Bugfix: MEGA Pass - context menu button too dark when hovered

--- a/css/pwm/dropdown.css
+++ b/css/pwm/dropdown.css
@@ -37,6 +37,10 @@
 .nav-elem.list-item {
     padding: 0;
 }
+.nav-elem.list-item:hover,
+.nav-elem.dropdown-button:hover {
+    background: unset;
+}
 
 /* Selection options */
 .nav-elem.full-width.text-only.list-item span {
